# MegaEngineRing

./: .clang-format  .clang-tidy  .gdbinit  .gitignore  .gitmodules  BUILDING.md  CLionFormatting.xml  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HACKING.md  README.md  vcpkg.json
data/: CMakeLists.txt  Resources.h.in  resources.xml
data/Resources/: Base.cmb  ResourceCreationWindow.cmb  ResourceCreationWindow.ui  ResourceEditorWindow.cmb  ResourceSelectionWindow.cmb  ResourceSelectionWindow.ui  base.ui
data/Resources/Shaders/: Common.frag  Common.h.frag  Shaders.json  ShadersListSchema.json
data/Resources/paned-layouts/: Layouts.json  ResourceEditorLayout.json
data/_builtin_/shaders/: DefaultInstancedProgram.enshader
data/css/: style.css
data/locale/: mer.pot
data/locale/ru_RU/: ui.po
data/paned-layouts/: SceneEditorLayout.json
data/shaders/: DefaultInstancedProgram.enshader
data/ui/: CreateOpenProject.ui  ResourceEditorWindow.cmb  ResourceEditorWindow.ui  ResourceSelectionWindow.ui  base.ui
editor/: CMakeLists.txt  CompressedFonts.h.in  GameEngine.cpp  GameEngine.h  Globals.cpp  Globals.h  I18N.cpp  I18N.h  ImGuiFileDialogConfigCustom.h  MegaEngineRing.pot  StringInputStream.cpp  StringInputStream.h  Utils.cpp  Utils.h  common.h
editor/cmdOptions/: EngineOptionGroup.cpp  EngineOptionGroup.h
editor/cmdOptions/options/: LogPathOption.cpp  LogPathOption.h  Option.cpp  Option.h  ResPathOption.cpp  ResPathOption.h  SdkPathOption.cpp  SdkPathOption.h  SdkVersionOption.cpp  SdkVersionOption.h
editor/graphic/: EngineContext.cpp  EngineContext.h  ProgramWideSettings.cpp  ProgramWideSettings.h  ProgramWideSettingsFwd.h  UIUtils.cpp  UIUtils.h
editor/graphic/objects/: Door.h  DoorFwd.h
editor/graphic/renderers/: MeshBoundsBase.cpp  MeshBoundsBase.h  MeshMaterial.h  SceneMesh.cpp  SceneMesh.h  SceneMeshBase.cpp  SceneMeshBase.h  SceneMeshFwd.h
editor/graphic/shaders/: ShadersList.cpp  ShadersList.h  SimpleShader.cpp  SimpleShader.h
editor/graphic/viewport/: Camera.cpp  Camera.h  CameraFwd.h  OpenGL.cpp  OpenGL.h  OpenGLFwd.h
editor/mvp/: ApplicationController.cpp  ApplicationController.h  IApplicationController.h  IPresenter.h  IView.h  PresenterBase.cpp  PresenterBase.h  ThreadDispatcher.cpp  ThreadDispatcher.h
editor/mvp/contexts/: ApplicationContext.cpp  ApplicationContext.h  IWidgetContext.h  MultiPanedContext.cpp  MultiPanedContext.h  UiWindowContext.cpp  UiWindowContext.h  ViewportContext.cpp  ViewportContext.h
editor/mvp/creatingProject/: IModelCreatingProject.h  IViewCreatingProject.h  ModelCreatingProject.h  PresenterCreatingProject.cpp  PresenterCreatingProject.h  ProjectCreatingTask.h  ProjectCreatingWindow.cpp  ProjectCreatingWindow.h
editor/mvp/editor/: Editor.cpp  Editor.h  EditorUi.cpp  EditorUi.h
editor/mvp/main/: IModelMain.h  IPresenterMain.h  IViewMain.h  MainWindow.cpp  MainWindow.h  ModelMain.cpp  ModelMain.h  PanedLayoutTab.cpp  PanedLayoutTab.h  PresenterMain.cpp  PresenterMain.h
editor/mvp/objectProperties/: ModelObjectProperties.cpp  ModelObjectProperties.h  PresenterObjectProperties.cpp  PresenterObjectProperties.h  ViewObjectProperties.cpp  ViewObjectProperties.h
editor/mvp/onlineImport/: ModelOnlineImport.cpp  ModelOnlineImport.h  PresenterOnlineImport.cpp  PresenterOnlineImport.h  ViewOnlineImport.cpp  ViewOnlineImport.h
editor/mvp/prefabEditor/: IModelPrefabEditor.h  IPresenterPrefabEditor.h  IViewPrefabEditor.h  ModelPrefabEditor.cpp  ModelPrefabEditor.h  PresenterPrefabEditor.cpp  PresenterPrefabEditor.h  ViewPrefabEditor.cpp  ViewPrefabEditor.h
editor/mvp/projectExplorer/: IModelProjectExplorer.h  IPresenterProjectExplorer.h  IViewProjectExplorer.h  ModelProjectExplorer.cpp  ModelProjectExplorer.h  PresenterProjectExplorer.cpp  PresenterProjectExplorer.h  ViewProjectExplorer.cpp  ViewProjectExplorer.h
editor/mvp/resourceCreation/: IModelResourceCreation.h  IPresenterResourceCreation.h  IViewResourceCreation.h  ModelResourceCreation.cpp  ModelResourceCreation.h  PresenterResourceCreation.cpp  PresenterResourceCreation.h  ViewResourceCreation.cpp  ViewResourceCreation.h
editor/mvp/resourceEditor/: EditingResourceList.cpp  EditingResourceList.h  IModelResourceEditor.h  IPresenterResourceEditor.h  IViewResourceEditor.h  ModelResourceEditor.cpp  ModelResourceEditor.h  PresenterResourceEditor.cpp  PresenterResourceEditor.h  ViewResourceEditor.cpp  ViewResourceEditor.h
editor/mvp/resourceSelection/: IModelResourceSelection.h  IPresenterResourceSelection.h  IViewResourceSelection.h  ModelResourceSelection.cpp  ModelResourceSelection.h  PresenterResourceSelection.cpp  PresenterResourceSelection.h  ViewResourceSelection.cpp  ViewResourceSelection.h
editor/mvp/sceneEditor/: NodeSelectionHelper.h  ResourcesContext.cpp  ResourcesContext.h  SceneOverlayElements.cpp  SceneOverlayElements.h  ViewSceneEditor.cpp  ViewSceneEditor.h
editor/mvp/scenePreview/: CustomEditorRenderer.cpp  CustomEditorRenderer.h  IModelScenePreview.h  IPresenterScenePreview.h  IViewScenePreview.h  ModelScenePreview.cpp  ModelScenePreview.h  PresenterScenePreview.cpp  PresenterScenePreview.h  (+2 more)
editor/project/: CreateProjectWindow.cpp  CreateProjectWindow.h  EditorFileSystemResourceBundle.cpp  EditorFileSystemResourceBundle.h  LoadedScene.cpp  LoadedScene.h  Project.cpp  Project.h  ProjectFwd.h  ProjectSettings.cpp  Runner.cpp  Runner.h  SceneTypeRegister.cpp  SceneTypeRegister.h  Sdk.cpp  Sdk.h
engine/: CMakeLists.txt  UnrealGuiStyle.h  common.h  imconfig_custom.cpp  imconfig_custom.h
engine/docs/: Doxyfile.in
engine/test/: CMakeLists.txt
runner/: CMakeLists.txt
runner/data/: RequestSchema.json  test.json
runner/sources/: Client.cpp  Client.h  Globals.cpp  Globals.h  main.cpp
sandbox/: CMakeLists.txt  Sandbox.cppm  main.cpp
sdk/: CMakeLists.txt  UnrealGuiStyle.h  common.h  imconfig_custom.cpp  imconfig_custom.h
sdk/docs/: conf.py.in
sdk/test/: CMakeLists.txt
test/: CMakeLists.txt
test/source/: GameEngine_test.cpp
utils/: CMakeLists.txt
utils/test/: CMakeLists.txt
(+1357 files in other folders)
