install(
        DIRECTORY Resources
        DESTINATION "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME}"
        COMPONENT editor
)
install(
        DIRECTORY shaders
        DESTINATION "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME}/data"
        COMPONENT editor
)